[project]
name = "repl-nix-cabocountdown"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "trafilatura>=1.12.2",
    "requests>=2.32.3",
    "cachetools>=5.5.0",
    "ratelimit>=2.2.1",
    "waitress>=3.0.1",
]
